working on auth - ref from fastapi tutorials

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi",
     "uvicorn[standard]",
-    "python-multipart"
+    "python-multipart",
+    "pyjwt",
+    "passlib[bcrypt]"
 ]
