--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,5 +9,9 @@ dependencies = [
     "uvicorn[standard]",
     "python-multipart",
     "pyjwt",
-    "passlib[bcrypt]"
+    "passlib[bcrypt]",
+    "torch>=2.7.0",
+    "torchvision>=0.22.0",
+    "diffusers>=0.33.1",
+    "transformers>=4.51.3"
 ]
