--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,5 +13,6 @@ dependencies = [
     "torch>=2.7.0",
     "torchvision>=0.22.0",
     "diffusers>=0.33.1",
-    "transformers>=4.51.3"
+    "transformers>=4.51.3",
+    "accelerate>=1.7.0",
 ]
